# simulator-overview

./: .gitignore  CLAUDE.md  README.md  SPEC.md  data-flow.md  docker-compose.yml  prd.json  progress.txt  run-ralph.sh  simulation_overview.html
backend/: .gitignore  Dockerfile  pyproject.toml
backend/src/walkthrough/: config.py  deps.py  main.py
backend/src/walkthrough/ai/: agent.py  document_ai.py  gemini_screenshot.py  gemini_video.py  local_gemini_screenshot.py  local_gemini_video.py  local_pdf.py  orchestrator.py
backend/src/walkthrough/ai/llm/: client.py  review_pass.py
backend/src/walkthrough/ai/prompts/: compose.py  fidelity.py
backend/src/walkthrough/ai/qa/: decision_tree_structure.py  narrative_fidelity_critic.py  output_schema.py  runner.py  video_coverage.py
backend/src/walkthrough/ai/tools/: best_guess.py  clarification.py  consolidator.py  detect_contradictions.py  detect_contradictions_critic.py  generate.py  merge_paths.py  narrative.py  narrative_critic.py
backend/src/walkthrough/api/: clarification.py  projects.py  session.py  upload.py
backend/src/walkthrough/models/: __init__.py  pdf.py  project.py  qa.py  video.py  workflow.py
backend/src/walkthrough/storage/: constants.py  firestore.py  gcs.py  local_firestore.py  local_storage.py  phase_artifacts.py
backend/tests/: conftest.py  test_best_guess.py  test_clarification_choices.py  test_consolidator.py  test_contradictions_critic.py  test_generate.py  test_llm_client.py  test_local_gemini_video.py  test_meta_answer_cascade.py  test_narrative_critic.py  test_orchestrator_critics.py  test_orchestrator_qa_phase.py  test_orchestrator_resume.py  test_phase_artifacts.py  test_prompts.py  test_qa_decision_tree.py  test_qa_models.py  test_qa_narrative_fidelity.py  test_qa_output_schema.py  test_qa_runner.py  test_qa_video_coverage.py  test_review_pass.py
(+26 files in other folders)
