[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "walkthrough"
version = "0.1.0"
description = "SOP-to-Simulation Pipeline backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.42",
    "python-multipart>=0.0.17",
    "sse-starlette>=2.1",
]

[project.optional-dependencies]
gcp = [
    "google-cloud-storage>=2.18",
    "google-cloud-firestore>=2.19",
    "google-cloud-aiplatform>=1.74",
    "google-cloud-documentai>=2.32",
]
local = [
    "pymupdf>=1.25",
    "google-genai>=1.14",
]

[dependency-groups]
dev = [
    "pyright>=1.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: requires live Gemini API (deselect with -m 'not integration')"]

[tool.hatch.build.targets.wheel]
packages = ["src/walkthrough"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"
